--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 COMPOSIO_API_KEY=
 GOOGLE_API_KEY=
+DATABASE_URL=sqlite+aiosqlite:///D:/code/arthion/composio_hack/composio.db # Must give absolute path
