--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,6 @@ dependencies = [
     "langgraph>=0.6.10",
     "langgraph-checkpoint-sqlite>=2.0.11",
     "sqlalchemy>=2.0.44",
+    "streamlit>=1.50.0",
     "structlog>=25.4.0",
 ]
