--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -166,3 +165,7 @@ cython_debug/
 .env
 
 *.db*
+
+# Front end
+frontend/node_modules/
+frontend/build/
