fix: Logging configuration, replaced logging with structlog and project cleanup. feat: docker-compose for the project and github action for format checking

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,19 @@
 COMPOSIO_API_KEY=
 GOOGLE_API_KEY=
+
+# ----- Optional ENV variables -----
+
+# Optional Database file path (Must be empty for docker build)
+# Saves the .db file in the project root directory if not specified.
+# Format f"sqlite+aiosqlite:///{.db posix file path}"
+DATABASE_URL=
+
+# Logging configuration
+ENV_MODE= # default "LOCAL". Anything other than "LOCAL" or "DEVELOPMENT" will output structured logging (suitable for filtering) instead of string logging
+LOG_LEVEL= # default "INFO".
+
+# Optional Langsmith tracing
+LANGSMITH_TRACING=true
+LANGSMITH_ENDPOINT=https://api.smith.langchain.com
+LANGSMITH_API_KEY=
+LANGSMITH_PROJECT=composio-agent-builder
