--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,21 @@
 COMPOSIO_API_KEY=
-GOOGLE_API_KEY=
+OPENAI_API_KEY=
 
 # ----- Optional ENV variables -----
 
-# Optional Database file path (Must be empty for docker build)
-# Saves the .db file in the project root directory if not specified.
-# Format f"sqlite+aiosqlite:///{.db posix file path}"
-DATABASE_URL=
+## Optional Database file path (Must be empty for docker build)
+## Saves the .db file in the project root directory if not specified.
+## Format f"sqlite+aiosqlite:///{.db posix file path}"
+# DATABASE_URL=...
 
-# Logging configuration
-ENV_MODE= # default "LOCAL". Anything other than "LOCAL" or "DEVELOPMENT" will output structured logging (suitable for filtering) instead of string logging
-LOG_LEVEL= # default "INFO".
+### Logging configuration
+## default "LOCAL". Anything other than "LOCAL" or "DEVELOPMENT" will output structured logging (suitable for filtering) instead of string logging
+# ENV_MODE=...
+## default "INFO"
+# LOG_LEVEL=...
 
-# Optional Langsmith tracing
-LANGSMITH_TRACING=true
-LANGSMITH_ENDPOINT=https://api.smith.langchain.com
-LANGSMITH_API_KEY=
-LANGSMITH_PROJECT=composio-agent-builder
+## Optional Langsmith tracing
+# LANGSMITH_TRACING=true
+# LANGSMITH_ENDPOINT=https://api.smith.langchain.com
+# LANGSMITH_API_KEY=...
+# LANGSMITH_PROJECT=composio-agent-builder
