--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,8 @@ requires-python = "==3.12.*"
 dependencies = [
     "apscheduler>=3.11.0",
     "composio>=0.8.20",
+    "composio-langchain>=0.9.0",
+    "composio-langgraph>=0.9.0",
     "croniter>=6.0.0",
     "db-sqlite3>=0.0.1",
     "dotenv>=0.9.9",
